@@ -138,6 +138,9 @@ struct input {
 
   const char *in_file_name;
 
+  /* Owner and mode to be set just before closing the file.  */
+  struct stat st;
+
   /* if NULL, none of the following are valid */
   FILE *fp;
 
@@ -713,9 +716,8 @@ open_next_file(name, input)
 
   if (in_place_extension)
     {
-      int input_fd, output_fd;
+      int input_fd;
       char *tmpdir, *p;
-      struct stat st;
 
       if (follow_symlinks)
 	input->in_file_name = follow_symlink (name);
@@ -733,8 +735,8 @@ open_next_file(name, input)
         panic(_("couldn't edit %s: is a terminal"), input->in_file_name);
 
       input_fd = fileno (input->fp);
-      fstat (input_fd, &st);
-      if (!S_ISREG (st.st_mode))
+      fstat (input_fd, &input->st);
+      if (!S_ISREG (input->st.st_mode))
         panic(_("couldn't edit %s: not a regular file"), input->in_file_name);
 
 #ifndef BOOTSTRAP
@@ -763,12 +765,6 @@ open_next_file(name, input)
 
       if (!output_file.fp)
         panic(_("couldn't open temporary file %s: %s"), input->out_file_name, strerror(errno));
-
-      output_fd = fileno (output_file.fp);
-#ifdef HAVE_FCHOWN
-      if (fchown (output_fd, st.st_uid, st.st_gid) == -1)
-        fchown (output_fd, -1, st.st_gid);
-#endif
     }
   else
     {
@@ -797,9 +793,13 @@ closedown(input)
       target_name = input->in_file_name;
       input_fd = fileno (input->fp);
       output_fd = fileno (output_file.fp);
+#ifdef HAVE_FCHOWN
+      if (fchown (output_fd, input->st.st_uid, input->st.st_gid) == -1)
+        fchown (output_fd, -1, input->st.st_gid);
+#endif
       copy_acl (input->in_file_name, input_fd,
 		input->out_file_name, output_fd,
-		st.st_mode);
+		input->st.st_mode);
 
       ck_fclose (input->fp);
       ck_fclose (output_file.fp);
